Update russian translation

--- a/locale/ru_RU/LC_MESSAGES/mail-hosting.po
+++ b/locale/ru_RU/LC_MESSAGES/mail-hosting.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-01-01 13:08+0100\n"
-"PO-Revision-Date: 2023-01-03 21:44+0100\n"
+"PO-Revision-Date: 2023-01-04 23:47+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ru_RU\n"
@@ -61,7 +61,7 @@ msgid ""
 msgstr ""
 "Бесплатная и анонимная электронная почта, а также аккаунт Jabber, все это "
 "доступно из под одной учетной записи. Ваш Jabber ID это user@%1$s он "
-"доступен как через обычный интернет так и через Tor сеть (%2$s)."
+"доступен как через обычный интернет, так и через Tor сеть (%2$s)."
 
 #: www/index.php:24
 #, php-format
@@ -81,11 +81,11 @@ msgid ""
 "noreferrer\">https://gnupg.org</a> Windows GUI: <a href=\"https://gpg4usb."
 "org\" target=\"_blank\" rel=\"noopener noreferrer\">https://gpg4usb.org</a>"
 msgstr ""
-"Для обеспечения конфидециальности, по возможности используйте PGP для "
+"Для обеспечения конфиденциальности, по возможности используйте PGP для "
 "шифрования почты. Это не позволит третьим лицам читать ваши письма (включая "
 "меня). GnuPGs официальный сайт: <a href=\"https://gnupg.org\" "
-"target=\"_blank\" rel=\"noopener noreferrer\">https://gnupg.org</a> Windows "
-"Для: <a href=\"https://gpg4usb.org\" target=\"_blank\" rel=\"noopener "
+"target=\"_blank\" rel=\"noopener noreferrer\">https://gnupg.org</a> для "
+"Windows: <a href=\"https://gpg4usb.org\" target=\"_blank\" rel=\"noopener "
 "noreferrer\">https://gpg4usb.org</a>"
 
 #: www/index.php:26
@@ -117,8 +117,9 @@ msgid ""
 "You can also connect on the same ports via the Tor onion address %s, but you "
 "will have to accept an SSL certificate only valid for the clearnet domain."
 msgstr ""
-"Вы можете подключиться через сеть Tor %s, использовав эти же порты но вам "
-"необходимо будет принять SSL-сертификат как для обчного интернета (clearnet)."
+"Вы можете подключиться через сеть Tor %s, используя эти же порты, но вам "
+"необходимо будет принять SSL-сертификат как для обычного интернета "
+"(clearnet)."
 
 #: www/index.php:34
 msgid "XMPP setup"
