--- a/locale/mail-hosting.pot
+++ b/locale/mail-hosting.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-09-12 19:48+0200\n"
+"POT-Creation-Date: 2023-09-12 20:01+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -54,7 +54,7 @@ msgid "You are not allowed to manage this domain."
 msgstr ""
 
 #: common_config.php:296
-msgid "Invalid email address.)"
+msgid "Invalid email address."
 msgstr ""
 
 #: setup.php:8
