Add user@ to email address

--- a/locale/mail-hosting.pot
+++ b/locale/mail-hosting.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-07-08 15:41+0200\n"
+"POT-Creation-Date: 2024-07-08 15:47+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -313,7 +313,7 @@ msgstr ""
 
 #: www/index.php:28
 #, php-format
-msgid "Your E-Mail address will be %s"
+msgid "Your E-Mail address will be user@%s"
 msgstr ""
 
 #: www/index.php:29
